@startuml
' STYLE START
hide empty members
skinparam shadowing false
' STYLE END


class "UserDefaultsCredentialsProvider" as UserDefaultsCredentialsProvider << (C, DarkSeaGreen) >> { 
  -emailKey
  -passwordKey
  -defaults
  ~hasSavedCredentials : Bool
  ~savedEmail : String?
  ~savedPassword : String? 
}

class "AppleKeychainCredentialsProvider" as AppleKeychainCredentialsProvider << (C, DarkSeaGreen) >> { 
  -emailKey
  -passwordKey
  -keychain
  ~hasSavedCredentials : Bool
  ~savedEmail : String?
  ~savedPassword : String? 
}

class "DTUserCredentialsProvider" as DTUserCredentialsProvider << (P, GoldenRod) protocol >> { 
  ~hasSavedCredentials : Bool
  ~savedEmail : String?
  ~savedPassword : String? 
}

class "HomeViewController" as HomeViewController << (C, DarkSeaGreen) >> { 
  -emailTextField : UITextField!
  -passwordTextField : UITextField!
  -displayNameTextField : UITextField!
  -credentialsProvider
  -loadSavedCredentials()
}

UserDefaultsCredentialsProvider ..|> DTUserCredentialsProvider
AppleKeychainCredentialsProvider ..|> DTUserCredentialsProvider
' HomeViewController *-- "1" DTUserCredentialsProvider
DTUserCredentialsProvider "1" --* HomeViewController
@enduml
